test/mulberry/Language/default_readonly_parameter_error.mulberry
# RUN: not mulberry-driver -dump=mlir %s 2>&1 | FileCheck %s

fn append(values: List<UInt64>): () {
  values.push(4);
}

fn main(): UInt64 {
  var values: List<UInt64> = list.from([1, 2, 3]);
  append(values);
  return 0;
}

# CHECK: error: cannot use readonly object as mutable reference
